--- a/IncrementCounter.html
+++ b/IncrementCounter.html
@@ -10,8 +10,14 @@
 <body>
     <h2>People Entered : </h2>
     <h3 id="count-el"> 0 </h3>
+    <button id="decrement-btn" class="btn btn-danger text-white" onclick="decrement()">Decrement</button>
     <button id="increment-btn" class="btn btn-primary text-white" onclick="increment()">Increment</button>
     <button id="save-btn" class="btn btn-secondary text-white" onclick="save()">Save</button>
+    <p id="welcome-el"></p>
+    <p id="save-el">Previous entries : </p>
+    <img src="./shoes.jpg" alt="shoes"/>
+    <buuton class="btn btn-success text-white" onclick="error()">1500 /-</buuton>
+    <p id="error-el" class="text-danger"></p>
     <script src="./IncrementCounter.js"></script>
 </body>
 </html>
