--- a/BlackJack.html
+++ b/BlackJack.html
@@ -15,6 +15,7 @@
     <p class="text-white" id="sum-el">Sum: </p>
     <button class="btn btn-warning text-white" onclick="startGame()">Start Game</button>
     <button class="btn btn-warning text-white" onclick="newCard()">New Card</button>
+    <p id="player-el" class="text-white"></p>
     
     <script src="./BlackJack.js"></script>
 </body>
